save network notebook done

--- a/filter_edgelist_data.ipynb
+++ b/filter_edgelist_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
     "    \"\"\" Returns a list of files in a directory\n",
     "        Input parameter: path to directory\n",
     "    \"\"\"\n",
-    "    mypath = \"data/edge-list/\"\n",
+    "    mypath = path\n",
     "    complete = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
     "    return complete"
    ]
