--- a/save_network.ipynb
+++ b/save_network.ipynb
@@ -93,6 +93,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "politician_data.to_json(\"data/politician-data.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": true
