--- a/gender-detection/gender.ipynb
+++ b/gender-detection/gender.ipynb
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1558,12 +1558,180 @@
       "Around 250 new names fetcehd!\n",
       "Around 250 new names fetcehd!\n",
       "Around 250 new names fetcehd!\n",
-      "Around 250 new names fetcehd!\n"
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "('response not in JSON format (server responded with 502: Bad Gateway)', {'Server': 'nginx/1.10.3 (Ubuntu)', 'Date': 'Mon, 23 Oct 2017 14:10:08 GMT', 'Content-Type': 'text/html', 'Content-Length': '182', 'Connection': 'keep-alive'})\n",
+      "Had a 2 minute break\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "('response not in JSON format (server responded with 502: Bad Gateway)', {'Server': 'nginx/1.10.3 (Ubuntu)', 'Date': 'Mon, 23 Oct 2017 14:19:35 GMT', 'Content-Type': 'text/html', 'Content-Length': '182', 'Connection': 'keep-alive'})\n",
+      "Had a 2 minute break\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "('response not in JSON format (server responded with 502: Bad Gateway)', {'Server': 'nginx/1.10.3 (Ubuntu)', 'Date': 'Mon, 23 Oct 2017 14:24:04 GMT', 'Content-Type': 'text/html', 'Content-Length': '182', 'Connection': 'keep-alive'})\n",
+      "Had a 2 minute break\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "('response not in JSON format (server responded with 502: Bad Gateway)', {'Server': 'nginx/1.10.3 (Ubuntu)', 'Date': 'Mon, 23 Oct 2017 14:32:50 GMT', 'Content-Type': 'text/html', 'Content-Length': '182', 'Connection': 'keep-alive'})\n",
+      "Had a 2 minute break\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "Around 250 new names fetcehd!\n",
+      "('response not in JSON format (server responded with 502: Bad Gateway)', {'Server': 'nginx/1.10.3 (Ubuntu)', 'Date': 'Mon, 23 Oct 2017 14:47:04 GMT', 'Content-Type': 'text/html', 'Content-Length': '182', 'Connection': 'keep-alive'})\n"
+     ]
+    },
+    {
+     "ename": "GenderizeException",
+     "evalue": "('response not in JSON format (server responded with 502: Bad Gateway)', {'Server': 'nginx/1.10.3 (Ubuntu)', 'Date': 'Mon, 23 Oct 2017 14:49:05 GMT', 'Content-Type': 'text/html', 'Content-Length': '182', 'Connection': 'keep-alive'})",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mGenderizeException\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32mC:\\Users\\vujovisn\\Documents\\dev\\Wikipedia-Politician-Network\\gender-detection\\genderize_query.py\u001b[0m in \u001b[0;36mfetch_gender\u001b[0;34m(name_list, genderize_obj)\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m             \u001b[0mresp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgenderize_obj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mi\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\vujovisn\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\genderize\\__init__.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, names, country_id, language_id, retheader)\u001b[0m\n\u001b[1;32m     94\u001b[0m                 \u001b[1;34m'response not in JSON format ({status})'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstatus\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstatus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 95\u001b[0;31m                 response.headers)\n\u001b[0m\u001b[1;32m     96\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mGenderizeException\u001b[0m: ('response not in JSON format (server responded with 502: Bad Gateway)', {'Server': 'nginx/1.10.3 (Ubuntu)', 'Date': 'Mon, 23 Oct 2017 14:47:04 GMT', 'Content-Type': 'text/html', 'Content-Length': '182', 'Connection': 'keep-alive'})",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mGenderizeException\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-ea7379dc56d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mflat_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgnd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfetch_gender\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgnd_object\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32mC:\\Users\\vujovisn\\Documents\\dev\\Wikipedia-Politician-Network\\gender-detection\\genderize_query.py\u001b[0m in \u001b[0;36mfetch_gender\u001b[0;34m(name_list, genderize_obj)\u001b[0m\n\u001b[1;32m     34\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m120\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m             \u001b[0mresp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgenderize_obj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mi\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Had a 2 minute break\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[1;31m# print(x)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\vujovisn\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\genderize\\__init__.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, names, country_id, language_id, retheader)\u001b[0m\n\u001b[1;32m     93\u001b[0m             raise GenderizeException(\n\u001b[1;32m     94\u001b[0m                 \u001b[1;34m'response not in JSON format ({status})'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstatus\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstatus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 95\u001b[0;31m                 response.headers)\n\u001b[0m\u001b[1;32m     96\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0mdecoded\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mGenderizeException\u001b[0m: ('response not in JSON format (server responded with 502: Bad Gateway)', {'Server': 'nginx/1.10.3 (Ubuntu)', 'Date': 'Mon, 23 Oct 2017 14:49:05 GMT', 'Content-Type': 'text/html', 'Content-Length': '182', 'Connection': 'keep-alive'})"
      ]
     }
    ],
    "source": [
     "flat_list = gnd.fetch_gender(name_list, gnd_object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'flat_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-059005da8da6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mflat_list\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'flat_list' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "flat_list"
    ]
   },
   {
