net size saves to json, not to csv

--- a/network_size.ipynb
+++ b/network_size.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -209,20 +209,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved to:  data/stats/net_size_ger.csv\n",
-      "Saved to:  data/stats/net_size_us.csv\n",
-      "Saved to:  data/stats/net_size_ru.csv\n",
-      "Saved to:  data/stats/net_size_gb.csv\n",
-      "Saved to:  data/stats/net_size_fr.csv\n"
+      "Saved to:  data/stats/net_size_ger.json\n"
      ]
     }
    ],
    "source": [
-    "net_size_de = save_network_size_per(\"nationality\", \"german\", \"data/graphs/\", \"data/stats/net_size_ger.csv\")\n",
-    "net_size_us = save_network_size_per(\"nationality\", \"american\", \"data/graphs/\", \"data/stats/net_size_us.csv\")\n",
-    "net_size_ru = save_network_size_per(\"nationality\", \"russian\", \"data/graphs/\", \"data/stats/net_size_ru.csv\")\n",
-    "net_size_gb = save_network_size_per(\"nationality\", \"british\", \"data/graphs/\", \"data/stats/net_size_gb.csv\")\n",
-    "net_size_fr = save_network_size_per(\"nationality\", \"french\", \"data/graphs/\", \"data/stats/net_size_fr.csv\")"
+    "net_size_de = save_network_size_per(\"nationality\", \"german\", \"data/graphs/\", \"data/stats/net_size_ger.json\")\n",
+    "net_size_us = save_network_size_per(\"nationality\", \"american\", \"data/graphs/\", \"data/stats/net_size_us.json\")\n",
+    "net_size_ru = save_network_size_per(\"nationality\", \"russian\", \"data/graphs/\", \"data/stats/net_size_ru.json\")\n",
+    "net_size_gb = save_network_size_per(\"nationality\", \"british\", \"data/graphs/\", \"data/stats/net_size_gb.json\")\n",
+    "net_size_fr = save_network_size_per(\"nationality\", \"french\", \"data/graphs/\", \"data/stats/net_size_fr.json\")"
    ]
   },
   {
