--- a/stats.ipynb
+++ b/stats.ipynb
@@ -186,65 +186,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# def male_to_female_ratio(df):\n",
+    "#     df[\"ratio\"] = df.apply(lambda x: x['m_nodes']/x['f_nodes'], axis=1)\n",
+    "#     df = df.sort_values(\"file\")\n",
+    "#     ratio = df.ratio.values\n",
+    "#     return ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# def male_to_female_ratio()\n",
+    "# df[\"ratio\"] = df.apply(lambda x: x['m_nodes']/x['f_nodes'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# import matplotlib.pyplot as plt\n",
+    "# import numpy as np\n",
+    "# # df.rato.values\n",
+    "# fig = plt.figure(figsize=(8,6))\n",
+    "# ax = fig.add_subplot(111)\n",
+    "# plt.plot(np.arange(1,33),male_to_female_ratio(df),marker=\"o\", label=\"ratio\",color=\"black\")\n",
+    "# #     plt.plot(np.arange(1,33),f_nodes, marker=\"X\",label=\"female\")\n",
+    "# plt.legend(loc='upper right')\n",
+    "# plt.ylim([0,30])\n",
+    "# plt.yscale('linear')\n",
+    "# plt.xlabel(\"year_month\")\n",
+    "# ax.set_xticklabels(['2001_06','2003_06','2005_12','2008_06','2010_12','2013_06','2015_12'],rotation='vertical')\n",
+    "# ax.set_xticks(np.arange(1,33,1),minor=True)\n",
+    "# plt.ylabel(\"male to female ratio\")\n",
+    "# # fig.savefig(\"plots/network_size_\"+name)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_ratio(x):\n",
+    "    if x['f_nodes'] == 0:\n",
+    "        return float('Inf')\n",
+    "    else:\n",
+    "        return x['m_nodes']/x['f_nodes']\n",
+    "\n",
+    "def male_to_female_ratio(df):\n",
+    "    \"\"\" Returns ratio for number of male nodes and female nodes\n",
+    "    \"\"\"\n",
+    "    df[\"ratio\"] = df.apply(get_ratio, axis=1)\n",
+    "    df = df.sort_values(\"file\")\n",
+    "    ratio = df.ratio.values\n",
+    "    return ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>{\"file\":{\"0\":\"2001_06\"</th>\n",
-       "      <th>1:\"2001_12\"</th>\n",
-       "      <th>2:\"2002_06\"</th>\n",
-       "      <th>3:\"2002_12\"</th>\n",
-       "      <th>4:\"2003_06\"</th>\n",
-       "      <th>5:\"2003_12\"</th>\n",
-       "      <th>6:\"2004_06\"</th>\n",
-       "      <th>7:\"2004_12\"</th>\n",
-       "      <th>8:\"2005_06\"</th>\n",
-       "      <th>9:\"2005_12\"</th>\n",
-       "      <th>...</th>\n",
-       "      <th>22:659</th>\n",
-       "      <th>23:679</th>\n",
-       "      <th>24:689</th>\n",
-       "      <th>25:703</th>\n",
-       "      <th>26:719</th>\n",
-       "      <th>27:734</th>\n",
-       "      <th>28:743</th>\n",
-       "      <th>29:758</th>\n",
-       "      <th>30:759</th>\n",
-       "      <th>31:765}}</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>0 rows × 96 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [{\"file\":{\"0\":\"2001_06\", 1:\"2001_12\", 2:\"2002_06\", 3:\"2002_12\", 4:\"2003_06\", 5:\"2003_12\", 6:\"2004_06\", 7:\"2004_12\", 8:\"2005_06\", 9:\"2005_12\", 10:\"2006_06\", 11:\"2006_12\", 12:\"2007_06\", 13:\"2007_12\", 14:\"2008_06\", 15:\"2008_12\", 16:\"2009_06\", 17:\"2009_12\", 18:\"2010_06\", 19:\"2010_12\", 20:\"2011_06\", 21:\"2011_12\", 22:\"2012_06\", 23:\"2012_12\", 24:\"2013_06\", 25:\"2013_12\", 26:\"2014_06\", 27:\"2014_12\", 28:\"2015_06\", 29:\"2015_12\", 30:\"2016_06\", 31:\"2016_12\"}, f_nodes:{\"0\":0, 1:0, 2:0, 3:0, 4:0, 5:1, 6:7, 7:17, 8:20, 9:26, 10:32, 11:39, 12:50, 13:58, 14:62, 15:64, 16:73, 17:85, 18:87, 19:90, 20:97, 21:101, 22:103, 23:111, 24:113, 25:116, 26:120, 27:121, 28:123, 29:131, 30:133, 31:134}, m_nodes:{\"0\":2, 1:2, 2:7, 3:15, 4:49, 5:73, 6:133, 7:256, 8:285, 9:313, 10:338, 11:358, 12:405, 13:436, 14:455, 15:480, 16:506, 17:543, 18:573, 19:585, 20:604, 21:624, 22:659, 23:679, 24:689, 25:703, 26:719, 27:734, 28:743, 29:758, 30:759, 31:765}}]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 96 columns]"
+       "array([         inf,          inf,  26.        ,  11.66666667,\n",
+       "        10.4       ,  13.57142857,  13.54545455,   8.07407407,\n",
+       "         9.625     ,   8.42424242,   9.25      ,   9.39473684,\n",
+       "         8.77777778,   8.71428571,   7.89830508,   7.64179104,\n",
+       "         7.87142857,   7.57317073,   7.38461538,   7.08      ,\n",
+       "         7.27184466,   7.24528302,   7.07142857,   7.19642857,\n",
+       "         6.85      ,   6.75609756,   6.49612403,   6.26666667,\n",
+       "         5.98601399,   5.94482759,   5.85810811,   5.64935065])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/stats/net_size_fr.csv\")\n",
-    "df \n",
-    "# def male_to_female_ratio()"
+    "male_to_female_ratio(df)"
    ]
   },
   {
