save_network notebook changed

--- a/gender-detection/gender.ipynb
+++ b/gender-detection/gender.ipynb
@@ -3524,13 +3524,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def save_lst_as_df(lst,col_name,path,header=True, index=False, encoding = \"ascii\"):\n",
+    "def save_lst_as_df(lst,col_name,path,header=True, index=False, encoding = \"utf-8\"):\n",
     "    df = pd.DataFrame({\n",
     "    col_name: lst  \n",
     "    })\n",
