save network modified to support direceted and undirected

--- a/save_network.ipynb
+++ b/save_network.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -339,35 +339,24 @@
      "output_type": "stream",
      "text": [
       "Number of nodes:  954\n",
-      "Number of edges:  1286\n"
+      "Number of edges:  1123\n"
      ]
     }
    ],
    "source": [
-    "net_df = load_df(\"data/filtered_edge_list\",\"2003_06.csv\")\n",
-    "G, num_n, num_e = set_attributes(net_df, politician_data)\n"
+    "# net_df = load_df(\"data/filtered_edge_list\",\"2003_06.csv\")\n",
+    "# G, num_n, num_e = set_attributes(net_df, politician_data,'undir')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "networkx.classes.digraph.DiGraph"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "type(G)"
+    "# type(G)"
    ]
   },
   {
