--- a/add_stats_to_network.ipynb
+++ b/add_stats_to_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -16,151 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "G = nx.read_gpickle(\"data/graphs/2012_12_dir\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# remove self loops, if node is pointing to self\n",
-    "G.remove_edges_from(G.selfloop_edges())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# gender_data = data[[\"ID\",\"gender\"]].set_index('ID')['gender'].to_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "nx.set_node_attributes(G, 'in_degree', G.in_degree())\n",
-    "nx.set_node_attributes(G, 'out_degree', G.out_degree())\n",
-    "nx.set_node_attributes(G, 'k_core', nx.core_number(G))\n",
-    "nx.set_node_attributes(G, 'eig_central', nx.eigenvector_centrality(G))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'eig_central': 2.6561894702452105e-24,\n",
-       " 'gender': 'male',\n",
-       " 'in_degree': 1,\n",
-       " 'k_core': 3,\n",
-       " 'name': [' sebastian arcos bergnes ', ' arcos bergnes sebastian '],\n",
-       " 'nationality': ['cuban'],\n",
-       " 'occupation': ['dentist', 'politician'],\n",
-       " 'out_degree': 3,\n",
-       " 'party': []}"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "G.node[1000016]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# https://coderwall.com/p/ohk6cg/remote-access-to-ipython-notebooks-via-ssh usefull link :) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['2001_06_dir',\n",
-       " '2001_12_dir',\n",
-       " '2002_06_dir',\n",
-       " '2002_12_dir',\n",
-       " '2003_06_dir',\n",
-       " '2003_12_dir',\n",
-       " '2004_06_dir',\n",
-       " '2004_12_dir',\n",
-       " '2005_06_dir',\n",
-       " '2005_12_dir',\n",
-       " '2006_06_dir',\n",
-       " '2006_12_dir',\n",
-       " '2007_06_dir',\n",
-       " '2007_12_dir',\n",
-       " '2008_06_dir',\n",
-       " '2008_12_dir',\n",
-       " '2009_06_dir',\n",
-       " '2009_12_dir',\n",
-       " '2010_06_dir',\n",
-       " '2010_12_dir',\n",
-       " '2011_06_dir',\n",
-       " '2011_12_dir',\n",
-       " '2012_06_dir',\n",
-       " '2012_12_dir',\n",
-       " '2013_06_dir',\n",
-       " '2013_12_dir',\n",
-       " '2014_06_dir',\n",
-       " '2014_12_dir',\n",
-       " '2015_06_dir',\n",
-       " '2015_12_dir',\n",
-       " '2016_06_dir',\n",
-       " '2016_12_dir']"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mypath = \"data/graphs\"\n",
-    "files = [f for f in listdir(mypath) if isfile(join(mypath, f)) and  f.endswith(\"dir\")]\n",
-    "files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -177,18 +33,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "G = nx.read_gpickle(\"data/graphs/2012_12_dir\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# remove self loops, if node is pointing to self\n",
+    "G.remove_edges_from(G.selfloop_edges())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# gender_data = data[[\"ID\",\"gender\"]].set_index('ID')['gender'].to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "files = get_files(mypath, \"dir\")"
+    "nx.set_node_attributes(G, 'in_degree', G.in_degree())\n",
+    "nx.set_node_attributes(G, 'out_degree', G.out_degree())\n",
+    "nx.set_node_attributes(G, 'k_core', nx.core_number(G))\n",
+    "nx.set_node_attributes(G, 'eig_central', nx.eigenvector_centrality(G))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'birthDate': None,\n",
+       " 'deathDate': datetime.datetime(1997, 12, 22, 0, 0),\n",
+       " 'eig_central': 2.6561894702452105e-24,\n",
+       " 'gender': 'male',\n",
+       " 'in_degree': 1,\n",
+       " 'k_core': 3,\n",
+       " 'name': [' sebastian arcos bergnes ', ' arcos bergnes sebastian '],\n",
+       " 'nationality': ['cuban'],\n",
+       " 'occupation': ['dentist', 'politician'],\n",
+       " 'out_degree': 3,\n",
+       " 'party': []}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.node[1000016]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# https://coderwall.com/p/ohk6cg/remote-access-to-ipython-notebooks-via-ssh usefull link :) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# mypath = \"data/graphs\"\n",
+    "# files = [f for f in listdir(mypath) if isfile(join(mypath, f)) and  f.endswith(\"dir\")]\n",
+    "# files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2003_12_dir_dir',\n",
+       " '2006_12_dir_dir',\n",
+       " '2008_12_dir_dir',\n",
+       " '2011_12_dir_dir',\n",
+       " '2013_12_dir_dir',\n",
+       " '2016_12_dir_dir']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mypath = \"data/filtered_graphs/\"\n",
+    "files = get_files(mypath, \"dir\")\n",
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -197,60 +186,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph 2003_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2003_12_dir_dir\n",
-      "Graph 2004_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2004_06_dir_dir\n",
-      "Graph 2004_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2004_12_dir_dir\n",
-      "Graph 2005_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2005_06_dir_dir\n",
-      "Graph 2005_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2005_12_dir_dir\n",
-      "Graph 2006_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2006_06_dir_dir\n",
-      "Graph 2006_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2006_12_dir_dir\n",
-      "Graph 2007_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2007_06_dir_dir\n",
-      "Graph 2007_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2007_12_dir_dir\n",
-      "Graph 2008_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2008_06_dir_dir\n",
-      "Graph 2008_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2008_12_dir_dir\n",
-      "Graph 2009_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2009_06_dir_dir\n",
-      "Graph 2009_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2009_12_dir_dir\n",
-      "Graph 2010_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2010_06_dir_dir\n",
-      "Graph 2010_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2010_12_dir_dir\n",
-      "Graph 2011_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2011_06_dir_dir\n",
-      "Graph 2011_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2011_12_dir_dir\n",
-      "Graph 2012_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2012_06_dir_dir\n",
-      "Graph 2012_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2012_12_dir_dir\n",
-      "Graph 2013_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2013_06_dir_dir\n",
-      "Graph 2013_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2013_12_dir_dir\n",
-      "Graph 2014_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2014_06_dir_dir\n",
-      "Graph 2014_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2014_12_dir_dir\n",
-      "Graph 2015_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2015_06_dir_dir\n",
-      "Graph 2015_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2015_12_dir_dir\n",
-      "Graph 2016_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2016_06_dir_dir\n",
-      "Graph 2016_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs2/2016_12_dir_dir\n"
+      "Graph 2003_12_dir_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2003_12_dir_dir\n",
+      "Graph 2006_12_dir_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2006_12_dir_dir\n",
+      "Graph 2008_12_dir_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2008_12_dir_dir\n",
+      "Graph 2011_12_dir_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2011_12_dir_dir\n",
+      "Graph 2013_12_dir_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2013_12_dir_dir\n",
+      "Graph 2016_12_dir_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2016_12_dir_dir\n"
      ]
     }
    ],
@@ -263,12 +210,12 @@
     "    nx.set_node_attributes(G, 'k_core', nx.core_number(G))\n",
     "    nx.set_node_attributes(G, 'eig_central', nx.eigenvector_centrality_numpy(G))\n",
     "    print(\"Graph {} stats computed.\".format(file))\n",
-    "    snet.save_network(G, \"data/graphs2\", file, \"dir\")"
+    "    snet.save_network(G, \"data/graphs_sats/\", file, \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -279,18 +226,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "G = nx.read_gpickle(\"data/graphs2/2003_12_dir_dir\")"
+    "G = nx.read_gpickle(\"data/graphs_sats/2016_12_dir_dir\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -298,10 +245,10 @@
     {
      "data": {
       "text/plain": [
-       "1000371"
+       "1000016"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -320,18 +267,18 @@
     {
      "data": {
       "text/plain": [
-       "{'eig_central': 0.028374873055327515,\n",
+       "{'eig_central': 0.06727555605745737,\n",
        " 'gender': 'male',\n",
-       " 'in_degree': 26,\n",
-       " 'k_core': 6,\n",
-       " 'name': [' saddam hussein '],\n",
-       " 'nationality': ['iraqi'],\n",
-       " 'occupation': ['novelist', 'writer', 'politician'],\n",
-       " 'out_degree': 7,\n",
-       " 'party': [\" ba'ath party \", \" arab socialist ba'ath party – iraq region \"]}"
+       " 'in_degree': 470,\n",
+       " 'k_core': 36,\n",
+       " 'name': [' adolf hitler '],\n",
+       " 'nationality': ['austrian', 'german'],\n",
+       " 'occupation': ['writer', 'politician'],\n",
+       " 'out_degree': 35,\n",
+       " 'party': [' nazi party ']}"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
